--- a/pigGame/style.css
+++ b/pigGame/style.css
@@ -32,9 +32,6 @@ body {
     position: relative;
     height: 75%;
     width: 70%;
-    background-color: rgb(255, 255, 255, 0.5);
-    border-radius: 1%;
-    box-shadow: 20px 20px 100px 50px rgb(0, 0, 0, 0.2);
 }
 
 /* Inicio dos posicionamentos flex dos jogadores */
@@ -42,6 +39,8 @@ body {
     display: flex;
     flex: 1 1 100%;
     justify-content: space-around;
+    border-radius: 1%;
+    box-shadow: 20px 20px 100px 50px rgb(0, 0, 0, 0.2);
 }
 
 .player-0, .player-1 {
@@ -49,17 +48,61 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    width: 100%;
+    transition: all 0.75s;
+}
+
+.player-active {
+    background-color: rgb(255, 255, 255, 0.3);
+}
+
+.player-winner {
+    background-color: rgb(0, 0, 0, 0.7);
+    color: rgb(255, 255, 255, 0.7);
 }
 
 .player-0-titulo, .player-1-titulo {
-    margin-bottom: 200px;
+    font-size: 1.8rem;
+    position: absolute;
+    top: 15%;
+    white-space: nowrap;
+}
+
+.score-0, .score-1 {
+    font-size: 5rem;
+    position: absolute;
+    top: 32%;
+}
+
+.current-0, .current-1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    bottom: 8%;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    color: #1ACEDB;
+    background-color: rgba(5, 0, 82, 0.842);
+    padding: 20px 50px;
+    border-radius: 15px;
+}
+
+.rodada {
+    margin-bottom: 2rem;
+}
+
+.pontos-atuais0,
+.pontos-atuais1 {
+    font-size: 2rem;
 }
 
 /* Inicio dos positions absolutes */
 .btns {
     position: absolute;
     text-align: center;
-    font-size: 16px;
+    font-size: 0.6rem;
     font-family: "Press Start 2P", system-ui;
     font-weight: 400;
     font-style: normal;
@@ -67,7 +110,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: rgb(255, 255, 255, 0.65);
-    padding: 15px 40px;
+    padding: 15px 30px;
     border-radius: 50px;
     text-transform: uppercase;
 }
@@ -77,17 +120,30 @@ body {
 }
 
 .btn-dice {
-    top: 70%;
+    top: 65%;
 }
 
 .btn-segura {
     top: 80%;
 }
 
+.hidden {
+    display: none;
+}
+
+.imagem-dado {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 75px;
+    height: 75px;
+}
+
 .footer {
     position: absolute;
     left: 50%;
-    bottom: 70px;
+    bottom: 5%  ;
     transform: translate(-50%, 0%);
 }
 /* Fim dos positions absolutes */
